--- a/dataset/README
+++ b/dataset/README
@@ -11,7 +11,7 @@ Follow the the steps below to install the tools needed.
    npm install express
 4. Install body-parser for node.js:
    npm install body-parser
-5. Download flightpal.db from https://gtvault-my.sharepoint.com/:u:/r/personal/smelaku6_gatech_edu/Documents/flightpal.db?csf=1&e=ugaYhO 
+5. Download flightpal.db from https://gtvault-my.sharepoint.com/:u:/g/personal/smelaku6_gatech_edu/ESMdj8SqdjNLr2yqBFrOLqoBluD5ww1GOTfG7FuVNCN7-g?e=a2l58X
 6. Run the server by typing: node .\flightpal_rest.js from the command line. This starts
    the REST API server which can then be queried using a client. The file flightpal.db
    should be in the same folder when running the server.
